--- a/go-lightweight-server/Dockerfile
+++ b/go-lightweight-server/Dockerfile
@@ -7,7 +7,7 @@ COPY ./app ./
 RUN go mod download
 RUN CGO_ENABLED=0 GOOS=linux go build -a -o main .
 
-FROM scratch
+FROM alpine:latest
 
 WORKDIR /app
 
